--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
 <head>
 	<title>animation</title>
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div class="main-div">
+<section class="section">
+	<div class="container ">
+		<img class="tom " src="https://vignette.wikia.nocookie.net/tomandjerry/images/6/65/20140211071529%21Tom_Tom_and_Jerry.png/revision/latest?cb=20140529170742">
+		<img class="jerry "   src="https://upload.wikimedia.org/wikipedia/en/2/2f/Jerry_Mouse.png">
 		
 
 	</div>
+</section>
 
 </body>
 </html>
